updated something in reporting